[gd_scene load_steps=12 format=3 uid="uid://dcjinf1aohow6"]

[ext_resource type="Script" path="res://Enemies/PugBoss/pugboss.gd" id="1_mcs6f"]
[ext_resource type="Texture2D" uid="uid://1hd7ms5g007w" path="res://Enemies/PugBoss/Assets/pugboss3.png" id="2_rrugj"]
[ext_resource type="AudioStream" uid="uid://bliw708v76yax" path="res://WorldObjects/Cauldron/Assets/Hit1.mp3" id="3_xjivd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22eiy"]
size = Vector2(49.6575, 44.7497)

[sub_resource type="Animation" id="Animation_yieym"]
resource_name = "Hit"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.06, 0.07, 0.08, 0.09, 0.1, 0.11, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_feqnm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j43ii"]
_data = {
"Hit": SubResource("Animation_yieym"),
"RESET": SubResource("Animation_feqnm")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bsy7i"]
animation = &"Hit"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n88hx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1e45o"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_11wor"]
states/Hit/node = SubResource("AnimationNodeAnimation_bsy7i")
states/Hit/position = Vector2(539, 108)
transitions = ["Start", "Hit", SubResource("AnimationNodeStateMachineTransition_n88hx"), "Hit", "End", SubResource("AnimationNodeStateMachineTransition_1e45o")]

[node name="PugBoss" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(0, 10)
collision_layer = 4
collision_mask = 33
script = ExtResource("1_mcs6f")

[node name="Vampurv1Ingrid" type="Sprite2D" parent="."]
position = Vector2(2, 0)
texture = ExtResource("2_rrugj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 0)
scale = Vector2(0.443035, 0.670396)
shape = SubResource("RectangleShape2D_22eiy")
disabled = true

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(1.22867, 1.22867)
collision_layer = 4
collision_mask = 11

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.62778, -0.813888)
scale = Vector2(0.360581, 0.545628)
shape = SubResource("RectangleShape2D_22eiy")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j43ii")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_11wor")
anim_player = NodePath("../AnimationPlayer")

[node name="PopDie" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xjivd")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
